# llm-bench

./: INSTALLATION.md  README.md  pyproject.toml
src/llm_benchmarker/: __init__.py  cli.py  client.py  config.py  metrics.py  results.py  runner.py
src/llm_benchmarker/benchmarks/: __init__.py  base.py  bfcl.py  docker_base.py  graphwalks.py  hle.py  humaneval.py  ifeval.py  longbench_v2.py  mmlu.py  mmlu_pro.py  mrcr.py  multi_if.py  swe_bench.py  swe_bench_pro.py  tau_bench.py  terminal_bench.py
src/llm_benchmarker/evaluators/: __init__.py  ast_eval.py  code_execution.py  exact_match.py  ifeval_rules.py  mcq.py  set_comparison.py
tests/: test_benchmarks.py  test_client.py  test_evaluators.py  test_runner.py
