[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-benchmarker"
version = "0.1.0"
description = "CLI tool for benchmarking LLMs served via vLLM's OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "openai>=1.30",
    "httpx>=0.27",
    "datasets>=2.19",
    "pydantic>=2.7",
    "rich>=13.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
llm-bench = "llm_benchmarker.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_benchmarker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
